fix jump-to-original-rfc button

--- a/html/master.css
+++ b/html/master.css
@@ -48,3 +48,12 @@ pre.text {
 .hidden {
   display: none;
 }
+
+button .jump-to-original-rfc {
+  color: #007bff;
+  text-decoration: none;
+}
+button .jump-to-original-rfc:hover {
+  color: #0056b3;
+  text-decoration: underline;
+}
